--- a/_posts/2023-01-06-wayuansu.markdown
+++ b/_posts/2023-01-06-wayuansu.markdown
@@ -3,8 +3,8 @@ layout: post
 title: "袜元素"
 img: ./6/main.jpg # Add image post (optional)
 date: 2023-01-06 12:54:00 +0300 #
-brif: 这是一个简短的介绍
-description: 这里是袜元素的描述. # Add post description (optional)
+brif: 步入舒适,步入时尚 
+description: 步入舒适,步入时尚| Step into Comfort. Step into Style. # Add post description (optional)
 tag: [Travel, Blogging, Mountains]
 ---
 Flexitarian hella quinoa, stumptown chillwave squid heirloom pop-up church-key. Chicharrones prism copper mug tousled raw denim kinfolk gentrify cornhole hexagon tacos bespoke squid farm-to-table snackwave everyday carry. Vaporware chicharrones activated charcoal jianbing pok pok. Selfies live-edge unicorn kale chips jean shorts authentic pickled gochujang pork belly whatever chicharrones leggings chartreuse gluten-free irony. Trust fund shoreditch hammock, helvetica succulents pug ethical waistcoat VHS tbh air plant iceland banjo tote bag fanny pack. Ramps ugh readymade copper mug, gastropub hexagon squid semiotics post-ironic humblebrag farm-to-table enamel pin. Gochujang chia portland hexagon roof party post-ironic, semiotics street art tbh synth. Air plant vinyl sustainable pork belly. Chicharrones cronut raw denim listicle flexitarian franzen. Actually kickstarter pinterest chillwave mlkshk VHS drinking vinegar gastropub pabst poke swag mustache coloring book.
