--- a/_posts/2023-01-03-babe-love.markdown
+++ b/_posts/2023-01-03-babe-love.markdown
@@ -11,6 +11,24 @@ tag: [Travel, Indonesia, Mountains]
 
 
 # 卫生巾
+<img src="https://s1.ax1x.com/2023/03/05/ppEvcbF.jpg" width="100%" height="auto">
+<img src="https://s1.ax1x.com/2023/03/05/ppEv6DU.jpg" width="100%" height="auto">
+<img src="https://s1.ax1x.com/2023/03/05/ppEvyuT.jpg" width="100%" height="auto">
+
+
+
+<img src="https://s1.ax1x.com/2023/08/26/pPNDnSI.jpg" width="100%" height="auto">
+<img src="https://s1.ax1x.com/2023/08/26/pPNDZYd.jpg" width="100%" height="auto">
+<img src="https://s1.ax1x.com/2023/03/05/ppEv0Cn.jpg" width="100%" height="auto">
+
+
+
+<img src="https://s1.ax1x.com/2023/08/26/pPNDnSI.jpg" width="100%" height="auto">
+<img src="https://s1.ax1x.com/2023/08/26/pPNDZYd.jpg" width="100%" height="auto">
+<img src="https://s1.ax1x.com/2023/03/05/ppEv0Cn.jpg" width="100%" height="auto">
+
+
+
 ---
 
 **更多产品请关注微信小程序：**
